70% coverage testcases